# danwi

./: Cargo.toml  README.md  TODO.md  build.rs  dimensions.txt  justfile  rust-toolchain.toml  units.txt
.github/workflows/: rust.yml
examples/: electrical_units.rs  kinematic_units.rs  thrust.rs
src/: constants.rs  dimension.rs  dimensions.rs  extensions.rs  lib.rs  prefix.rs  quantity.rs  sealed.rs  unit.rs  units.rs
src/quantity/: cmp.rs  convert.rs  fmt.rs  mod.rs  ops.rs
src/rational/: convert.rs  mod.rs  ops.rs
src/rational/tests/: arithmetic.rs  continued_fraction_algorithm.rs  mod.rs
src/scalar/: float.rs  mod.rs
src/storage/: float.rs  mod.rs  rational.rs
src/unit/: macros.rs  mod.rs  ops.rs  prefix.rs
src/units/: macros.rs  mod.rs
