[package]
name = "danwi"
version = "0.2.1"
edition = "2024"
description = "SI units library"
authors = ["David Park <dpjungmin@gmail.com>"]
repository = "https://github.com/dpjungmin/danwi"
license = "MIT OR Apache-2.0"

[features]
f32 = []
f64 = []
all = ["f32", "f64"]
default = ["all"]

[dependencies]
libm = "0.2.11"
paste = "1.0"
typenum = "1.18"
